<resources>
    <string name="app_name">Tycep_FE</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_studentData">Datos de alumnos</string>
    <string name="menu_schedule">Horario</string>
    <string name="menu_abscenses">Faltas</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_exit">Cerrar sesión</string>
    <string name="studentName_example">Maria Julieta Jiménez-Colubi del Castillo de Osvaldo</string>
    <string name="studentExample">María del mar Lopez Cañizares Segovia García Fernández López</string>
    <string name="sendButton_abscenses">Enviar</string>
    <string name="user_save">Guardado de usuario</string>
    <string name="themes">Temas</string>
    <string name="letter_size">Tamaño de letra</string>
    <string name="startChat_showStudent">Iniciar chat con tutor/tutores</string>
    <string name="segunda_instruccion_inserts">2. Asegurarse de que el archivo tiene el formato correcto para la inserción de datos elegida y dividido entre puntos y comas</string>
    <string name="primera_instruccion_inserts">1. Selecciona los datos a insertar</string>
    <string name="tercera_instruccion_inserts">3. Seleccione el archivo .txt a cargar.</string>
    <string name="inicio_username">Nombre de usuario</string>
    <string name="inicio_password">Contraseña</string>
    <string name="day5">Viernes</string>
    <string name="day4">Jueves</string>
    <string name="day3">Miércoles</string>
    <string name="day2">Martes</string>
    <string name="day1">Lunes</string>
    <string-array name="themes_array">
        <item>Oscuro</item>
        <item>Claro</item>
    </string-array>
    <string-array name="font_sizes_array">
        <item>Pequeña</item>
        <item>Mediana</item>
        <item>Grande</item>
    </string-array>
    <string-array name="user_save_array">
        <item>Recordar usuario</item>
        <item>No recordar usuario</item>
    </string-array>

    <string-array name="datos_a_insertar">
        <item>Alumnos</item>
        <item>Cursos</item>
        <item>Asignaturas</item>
        <item>Administradores</item>
        <item>Profesores</item>
        <item>Tutores legales</item>
        <item>Horarios</item>
    </string-array>

    <string-array name="instrucciones_para_inserts">
        <item>Introducir nombre, apellidos y DNI respectivamente entre puntos y comas. A cada alumno le corresponde una línea.</item>
        <item>Introducir nombre de los cursos separados entre puntos y comas. No es necesario que cada uno vaya en una línea.</item>
        <item>Introducir nombre de las asignaturas separadas entre puntos y comas. No es necesario que cada una vaya en una línea.</item>
        <item>Introducir dos palabras separadas por punto y coma para generar el usuario. Cada usuario debe ir en una línea y se generará un txt si la inserción ha sido correcta en la carpeta privada de la aplicación con el resultado. </item>
        <item>Introducir nombre, apellidos, DNI, correo y asignaturas que imparte el profesor. Los datos deben de ir separados por puntos y comas, y en el caso de las asignaturas estas se separarán con comas entre ellas. Cada usuario puede ocupar una línea y, si la inserción ha sido correcta, se generará un txt en la carpeta privada de la aplicación con el resultado del registro.</item>
        <item>Introducir nombre, apellidos, DNI, teléfono de contacto, dirección y DNIs de los tutelados correspondientes. Los datos serán separados por puntos y comas a excepción de los dnis que se dividirán entre comas. Cada usuario puede ocupar una línea y, si la inserción ha sido correcta, se generará un txt en la carpeta privada de la aplicación con el resultado del registro.</item>
        <item>Introducir nombre de asignatura, primera letra del día (L, M, X, J, V), hora (1 a 6), número del aula y DNI del profesor que imparte esa hora. Cada dato debe de estar separado de otro por puntos y comas y cada horario tiene que ir en una línea.</item>
    </string-array>

    <string-array name="filtrado_faltas">
        <item>Buscar faltas...</item>
        <item>Justificadas</item>
        <item>Injustificadas</item>
        <item>Entre dos fechas</item>
        <item>De un día</item>
        <item>Profesores</item>
        <item>Tutores legales</item>
        <item>Horarios</item>
    </string-array>
</resources>