<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_studentdata_or_course"
            android:icon="@drawable/person"
            android:title="@string/menu_studentData" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/calendar"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_absences"
            android:icon="@drawable/abscenses"
            android:title="@string/menu_abscenses" />

        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/manufacturing"
            android:title="@string/menu_config" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit"
            android:title="@string/menu_exit" />
    </group>
</menu>