<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.Configuration"
    android:background="@color/white">

    <!-- Temas -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themes"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/themes_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/themes_array"
        android:spinnerMode="dropdown"/>

    <!-- Tamaño de letra -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_size"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/font_size_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/font_sizes_array"
        android:spinnerMode="dropdown"/>

    <!-- Guardado de usuario -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_save"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/user_save_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/user_save_array"
        android:spinnerMode="dropdown"/>

</LinearLayout>
