<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tycep_fe.fragments.UploadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/tornadog" />

        <TextView
            android:id="@+id/step1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primera_instruccion_inserts"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:paddingBottom="40dp"
            android:layout_gravity="start"/>

        <Spinner
            android:id="@+id/dataTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/datos_a_insertar"
            android:layout_gravity="center"
            android:paddingBottom="20dp"
            />

        <TextView
            android:id="@+id/step2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segunda_instruccion_inserts"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="32dp"
            android:paddingBottom="8dp"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/formatInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text=""
            android:paddingTop="16dp"
            android:paddingBottom="32dp"/>

        <TextView
            android:id="@+id/step3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tercera_instruccion_inserts"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="32dp"
            android:paddingBottom="16dp"
            android:layout_gravity="start"/>

        <ImageButton
            android:id="@+id/ibUpload"
            android:layout_width="191dp"
            android:layout_height="203dp"
            android:src="@drawable/upload"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
