<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.horario"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >



        <!-- Tabla -->
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="40dp">

            <!-- Encabezado de la tabla (opcional) -->
            <TableRow>

                <TextView
                    android:id="@+id/d1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/day1"
                    style="@style/cabeceraHorario"/>

                <TextView
                    android:id="@+id/d2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/day2"
                    style="@style/cabeceraHorario"/>

                <TextView
                    android:id="@+id/d3"
                    android:layout_width="115dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/day3"
                    style="@style/cabeceraHorario"/>

                <TextView
                    android:id="@+id/d4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/day4"
                    style="@style/cabeceraHorario"/>

                <TextView
                    android:id="@+id/d5"
                    android:layout_width="85dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/day5"
                    style="@style/cabeceraHorario"/>
            </TableRow>

            <!-- Filas de la tabla -->
            <TableRow android:id="@+id/row1">
                <!-- Columna 1 -->
                <TextView
                    android:id="@+id/row1_col1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    style="@style/cuerpoHorario"/>
                <!-- Columna 2 -->
                <TextView
                    android:id="@+id/row1_col2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    style="@style/cuerpoHorario"/>
                <!-- Columna 3 -->
                <TextView
                    android:id="@+id/row1_col3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    style="@style/cuerpoHorario"/>
                <!-- Columna 4 -->
                <TextView
                    android:id="@+id/row1_col4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    style="@style/cuerpoHorario"/>
                <!-- Columna 5 -->
                <TextView
                    android:id="@+id/row1_col5"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    style="@style/cuerpoHorario"/>
            </TableRow>

            <TableRow android:id="@+id/row2">
                <!-- Columna 1 -->
                <TextView
                    android:id="@+id/row2_col1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 2 -->
                <TextView
                    android:id="@+id/row2_col2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 3 -->
                <TextView
                    android:id="@+id/row2_col3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 4 -->
                <TextView
                    android:id="@+id/row2_col4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 5 -->
                <TextView
                    android:id="@+id/row2_col5"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
            </TableRow>

            <TableRow android:id="@+id/row3">
                <!-- Columna 1 -->
                <TextView
                    android:id="@+id/row3_col1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 2 -->
                <TextView
                    android:id="@+id/row3_col2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 3 -->
                <TextView
                    android:id="@+id/row3_col3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 4 -->
                <TextView
                    android:id="@+id/row3_col4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 5 -->
                <TextView
                    android:id="@+id/row3_col5"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
            </TableRow>

            <TableRow android:id="@+id/row4">
                <!-- Columna 1 -->
                <TextView
                    android:id="@+id/row4_col"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Recreo" />

            </TableRow>

            <TableRow android:id="@+id/row5">
                <!-- Columna 1 -->
                <TextView
                    android:id="@+id/row5_col1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 2 -->
                <TextView
                    android:id="@+id/row5_col2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 3 -->
                <TextView
                    android:id="@+id/row5_col3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 4 -->
                <TextView
                    android:id="@+id/row5_col4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 5 -->
                <TextView
                    android:id="@+id/row5_col5"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
            </TableRow>

            <TableRow android:id="@+id/row6">
                <!-- Columna 1 -->
                <TextView
                    android:id="@+id/row6_col1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 2 -->
                <TextView
                    android:id="@+id/row6_col2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 3 -->
                <TextView
                    android:id="@+id/row6_col3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 4 -->
                <TextView
                    android:id="@+id/row6_col4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 5 -->
                <TextView
                    android:id="@+id/row6_col5"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
            </TableRow>

            <TableRow android:id="@+id/row7">
                <!-- Columna 1 -->
                <TextView
                    android:id="@+id/row7_col1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 2 -->
                <TextView
                    android:id="@+id/row7_col2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 3 -->
                <TextView
                    android:id="@+id/row7_col3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 4 -->
                <TextView
                    android:id="@+id/row7_col4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
                <!-- Columna 5 -->
                <TextView
                    android:id="@+id/row7_col5"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp" />
            </TableRow>

            <!-- Más filas aquí... -->

        </TableLayout>
    </LinearLayout>


</FrameLayout>